@@ -1,3 +1,11 @@
+2005-02-28  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* flower/memory-stream.cc: 
+	* flower/libc-extension.cc: Remove obsolete #undefs.
+
+	* flower/include/libc-extension.hh: Bugfix for BSD, place #ifdef
+	more carefully.
+
 2005-02-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* make/lilypond.fedora.spec.in (Requires): add GS 8.15 as
